# prism

./: .catalystrc  .gitignore  README.md  TODO  catalyst.json  d  project-structure.md  services-used.md
backend/: .env.example  BACKEND_DOCUMENTATION.md  Dockerfile  README.md  app-config.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py
backend/agents/general_chat/: agent.py  prompts.py
backend/agents/network_agent/: __init__.py  centrality.py  community_detection.py  graph_builder.py
backend/agents/response_structurer/: __init__.py  agent.py  prompts.py
backend/agents/router/: agent.py  prompts.py
backend/agents/text_to_sql/: __init__.py  agent.py  prompts.py  schema_context.py  validator.py
backend/agents/title_generator/: __init__.py  agent.py  prompts.py
backend/analytics/: forecasting.py  hotspot.py  trends.py
backend/core/: __init__.py  database.py  security.py
backend/data/: district_socioeconomic.json
backend/db/: db-table-schema.md
backend/jobs/: forecast_cron.py
backend/routers/: analytics.py  chat.py  dashboard.py  network.py
backend/schemas/: analytics.py  chat.py  dashboard.py  network.py
backend/services/: __init__.py  cache_service.py  example_usage.py  groq_client.py  llm_client.py  token_manager.py  translation.py
backend/tests/db/: add_conversation_metadata_columns.py  auto_sync_alerts.py  data_insertion.py  db_connection.py  get_schema.py  insert_derived_data.py  insert_recent_cases.py  populate_network_data.py  table_schema.py  test_schema.py  truncate.py  (+3 more)
(+73 files in other folders)
