[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.3",
    "catalyst>=22.4",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "pandas>=3.0.3",
    "prophet>=1.3.0",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
    "zcatalyst-sdk>=1.4.0",
]
